test/corpus/attribute.txt
============================================
Base Attribute
============================================

#[ test (std = @0x1 , signer = @0x46)]

----

(source_file
      (attribute_item
        (attribute
          (identifier)
          (identifier)
          (address_literal
            (hex_literal))
          (identifier)
          (address_literal
            (hex_literal)))))


============================================
Attribute
============================================

#[ todo (std = @0x1 , signer = @0x46)]

----

(source_file
      (attribute_item
        (attribute
          (identifier)
          (identifier)
          (address_literal
            (hex_literal))
          (identifier)
          (address_literal
            (hex_literal)))))
